--- a/AlexLandingPage.html
+++ b/AlexLandingPage.html
@@ -166,7 +166,7 @@
 		<a href="http://alexloveshotdogs.azurewebsites.net" class="thumbnail">
 		<img src="img/ass9.png"  alt="...">
 		</a>
-		<p><a class="btn btn-primary btn-lg"  href="#" role="button">Details</a>
+		<p><a class="btn btn-primary btn-lg"  id="assignment9" href="#" role="button">Details</a>
 		<a class="btn btn-warning btn-lg" id="repo" href="#" role="button">View Repo</a></p>
 	</div>
 	
