--- a/AlexLandingPage.html
+++ b/AlexLandingPage.html
@@ -167,7 +167,7 @@
 		<img src="img/ass9.png"  alt="...">
 		</a>
 		<p><a class="btn btn-primary btn-lg"  id="assignment9" href="#" role="button">Details</a>
-		<a class="btn btn-warning btn-lg" id="repo" href="#" role="button">View Repo</a></p>
+		<a class="btn btn-warning btn-lg" id="repo" href="https://github.com/was2792/HotDogLovers" role="button">View Repo</a></p>
 	</div>
 	
 	<div class="col-md-3">
